1. add weapons of great sword 2. add set 3. update convert json script

--- a/src/assets/scripts/json/langs/enUS/dataset.json
+++ b/src/assets/scripts/json/langs/enUS/dataset.json
@@ -1,262 +1,262 @@
 {
-    "r5": "Slot-Bow [1]",
-    "fj": "Slot",
-    "dq": "Slot-Bow [1][1]",
-    "nR": "Slot",
-    "2P": "Slot-Bow [1][2]",
-    "Kf": "Slot",
-    "fR": "Slot-Bow [2]",
-    "JL": "Slot",
-    "yU": "Slot-Bow [2][2]",
-    "6O": "Slot",
-    "rW": "Slot-Bow [3]",
-    "lo": "Slot",
-    "u6": "Slot-Bow [3][3]",
-    "lM": "Slot",
-    "KL": "Slot-Charge Blade [1]",
-    "zi": "Slot",
-    "oU": "Slot-Charge Blade [1][1]",
-    "Lt": "Slot",
-    "CD": "Slot-Charge Blade [1][2]",
-    "w4": "Slot",
-    "Zh": "Slot-Charge Blade [2]",
-    "NN": "Slot",
-    "0U": "Slot-Charge Blade [2][2]",
-    "1A": "Slot",
-    "dv": "Slot-Charge Blade [2][3]",
-    "2B": "Slot",
-    "jM": "Slot-Charge Blade [3]",
-    "st": "Slot",
-    "Qi": "Slot-Charge Blade [3][3]",
-    "89": "Slot",
-    "Wb": "Slot-Dual Blades [1]",
-    "do": "Slot",
-    "IW": "Slot-Dual Blades [1][1]",
-    "gZ": "Slot",
-    "RF": "Slot-Dual Blades [1][2]",
-    "B0": "Slot",
-    "DH": "Slot-Dual Blades [2]",
-    "we": "Slot",
-    "ji": "Slot-Dual Blades [2][2]",
-    "Za": "Slot",
-    "Yw": "Slot-Dual Blades [3]",
-    "Tc": "Slot",
-    "Ow": "Slot-Dual Blades [3][3]",
-    "3T": "Slot",
-    "6I": "Slot-Great Sword [1]",
-    "Z9": "Slot",
-    "9E": "Slot-Great Sword [1][1]",
-    "HL": "Slot",
-    "hP": "Slot-Great Sword [1][2]",
-    "2F": "Slot",
-    "Hl": "Slot-Great Sword [2]",
-    "wb": "Slot",
-    "bx": "Slot-Great Sword [2][2]",
-    "XY": "Slot",
-    "yr": "Slot-Great Sword [3]",
-    "F4": "Slot",
-    "aC": "Slot-Great Sword [3][3]",
-    "Lb": "Slot",
-    "0R": "Slot-Gunlance [1]",
-    "vD": "Slot",
-    "ER": "Slot-Gunlance [1][1]",
-    "Jp": "Slot",
-    "er": "Slot-Gunlance [1][3]",
-    "z8": "Slot",
-    "bh": "Slot-Gunlance [2]",
-    "UF": "Slot",
-    "OY": "Slot-Gunlance [2][3]",
-    "eW": "Slot",
-    "3I": "Slot-Gunlance [3]",
-    "ZB": "Slot",
-    "i3": "Slot-Gunlance [3][3]",
-    "lx": "Slot",
-    "jO": "Slot-Hammer [1]",
-    "WY": "Slot",
-    "Nd": "Slot-Hammer [1][1]",
-    "R2": "Slot",
-    "1h": "Slot-Hammer [1][2]",
-    "tx": "Slot",
-    "ew": "Slot-Hammer [2]",
-    "Ah": "Slot",
-    "At": "Slot-Hammer [2][2]",
-    "EQ": "Slot",
-    "gF": "Slot-Hammer [3]",
-    "af": "Slot",
-    "T8": "Slot-Hammer [3][3]",
-    "L9": "Slot",
-    "1Z": "Slot-Heavy Bowgun [1]",
-    "GU": "Slot",
-    "T0": "Slot-Heavy Bowgun [1][1]",
-    "O3": "Slot",
-    "25": "Slot-Heavy Bowgun [1][2]",
-    "u9": "Slot",
-    "la": "Slot-Heavy Bowgun [1][3]",
-    "60": "Slot",
-    "Fk": "Slot-Heavy Bowgun [2]",
-    "Be": "Slot",
-    "nq": "Slot-Heavy Bowgun [3]",
-    "Ku": "Slot",
-    "X3": "Slot-Heavy Bowgun [3][3]",
-    "1Q": "Slot",
-    "rR": "Slot-Hunting Horn [1]",
-    "hp": "Slot",
-    "b6": "Slot-Hunting Horn [1][1]",
-    "Oq": "Slot",
-    "E0": "Slot-Hunting Horn [1][2]",
-    "CB": "Slot",
-    "l2": "Slot-Hunting Horn [1][3]",
-    "SE": "Slot",
-    "3w": "Slot-Hunting Horn [2]",
-    "FF": "Slot",
-    "mE": "Slot-Hunting Horn [2][2]",
-    "N9": "Slot",
-    "vv": "Slot-Hunting Horn [3]",
-    "vx": "Slot",
-    "Px": "Slot-Hunting Horn [3][3]",
-    "Ww": "Slot",
-    "Jf": "Slot-Insect Glaive [1]",
-    "fd": "Slot",
-    "2x": "Slot-Insect Glaive [1][1]",
-    "2S": "Slot",
-    "wy": "Slot-Insect Glaive [1][2]",
-    "SA": "Slot",
-    "SK": "Slot-Insect Glaive [1][3]",
-    "Rp": "Slot",
-    "v0": "Slot-Insect Glaive [2]",
-    "KF": "Slot",
-    "jQ": "Slot-Insect Glaive [2][2]",
-    "t2": "Slot",
-    "QE": "Slot-Insect Glaive [3]",
-    "yN": "Slot",
-    "w6": "Slot-Insect Glaive [3][3]",
-    "Z5": "Slot",
-    "ym": "Slot-Lance [1]",
-    "QL": "Slot",
-    "po": "Slot-Lance [1][1]",
-    "9p": "Slot",
-    "5K": "Slot-Lance [1][2]",
-    "3c": "Slot",
-    "PU": "Slot-Lance [2]",
-    "Tv": "Slot",
-    "W5": "Slot-Lance [2][2]",
-    "dP": "Slot",
-    "TC": "Slot-Lance [3]",
-    "rK": "Slot",
-    "Ga": "Slot-Lance [3][3]",
-    "V1": "Slot",
-    "fP": "Slot-Light Bowgun [1]",
-    "B5": "Slot",
-    "nx": "Slot-Light Bowgun [1][1]",
-    "1w": "Slot",
-    "Q1": "Slot-Light Bowgun [1][3]",
-    "pN": "Slot",
-    "Xa": "Slot-Light Bowgun [2]",
-    "1L": "Slot",
-    "IA": "Slot-Light Bowgun [2][2]",
-    "r6": "Slot",
-    "4t": "Slot-Light Bowgun [2][3]",
-    "EW": "Slot",
-    "5P": "Slot-Light Bowgun [3]",
-    "Eo": "Slot",
-    "iQ": "Slot-Light Bowgun [3][3]",
-    "m1": "Slot",
-    "bA": "Slot-Long Sword [1]",
-    "r7": "Slot",
-    "Z8": "Slot-Long Sword [1][1]",
-    "Zz": "Slot",
-    "3B": "Slot-Long Sword [1][3]",
-    "9c": "Slot",
-    "PH": "Slot-Long Sword [2]",
-    "o2": "Slot",
-    "lk": "Slot-Long Sword [2][2]",
-    "hE": "Slot",
-    "mk": "Slot-Long Sword [3]",
-    "B8": "Slot",
-    "9K": "Slot-Long Sword [3][3]",
-    "1S": "Slot",
-    "q1": "Slot-Switch Axe [1]",
-    "Fp": "Slot",
-    "ka": "Slot-Switch Axe [1][1]",
-    "Vm": "Slot",
-    "Dy": "Slot-Switch Axe [1][2]",
-    "om": "Slot",
-    "ce": "Slot-Switch Axe [2]",
-    "nl": "Slot",
-    "3R": "Slot-Switch Axe [2][2]",
-    "h5": "Slot",
-    "b7": "Slot-Switch Axe [2][3]",
-    "OW": "Slot",
-    "Yj": "Slot-Switch Axe [3]",
-    "ZR": "Slot",
-    "Rm": "Slot-Switch Axe [3][3]",
-    "Pd": "Slot",
-    "pU": "Slot-Sword And Shield [1]",
-    "0K": "Slot",
-    "jn": "Slot-Sword And Shield [1][1]",
-    "pJ": "Slot",
-    "Qd": "Slot-Sword And Shield [1][2]",
-    "yI": "Slot",
-    "ha": "Slot-Sword And Shield [1][3]",
-    "Wj": "Slot",
-    "Zo": "Slot-Sword And Shield [2]",
-    "sr": "Slot",
-    "JY": "Slot-Sword And Shield [2][3]",
-    "Kv": "Slot",
-    "D3": "Slot-Sword And Shield [3]",
-    "bn": "Slot",
-    "H5": "Slot-Sword And Shield [3][3]",
-    "Lq": "Slot",
-    "b3": "Slot",
-    "6e": "Slot-Arm [1]",
-    "H3": "Slot-Arm [1][1]",
-    "9R": "Slot-Arm [1][1][1]",
-    "vQ": "Slot-Arm [1][1][3]",
-    "Jm": "Slot-Arm [1][2]",
-    "e2": "Slot-Arm [1][2][2]",
-    "Dj": "Slot-Arm [1][3]",
-    "RA": "Slot-Arm [2]",
-    "Jn": "Slot-Arm [2][2]",
-    "T1": "Slot-Arm [2][3]",
-    "19": "Slot-Arm [3]",
-    "j3": "Slot-Chest [1]",
-    "lD": "Slot-Chest [1][1]",
-    "vb": "Slot-Chest [1][1][1]",
-    "FZ": "Slot-Chest [1][1][3]",
-    "q0": "Slot-Chest [1][2]",
-    "H0": "Slot-Chest [1][3]",
-    "uY": "Slot-Chest [2]",
-    "Wa": "Slot-Chest [2][2]",
-    "xA": "Slot-Chest [3]",
-    "Qf": "Slot-Helm [1]",
-    "fa": "Slot-Helm [1][1]",
-    "zf": "Slot-Helm [1][1][1]",
-    "Dl": "Slot-Helm [1][1][3]",
-    "9n": "Slot-Helm [1][2]",
-    "fo": "Slot-Helm [1][3]",
-    "wI": "Slot-Helm [2]",
-    "al": "Slot-Helm [2][2]",
-    "cj": "Slot-Helm [2][3]",
-    "QX": "Slot-Helm [3]",
-    "KA": "Slot-Leg [1]",
-    "Q3": "Slot-Leg [1][1]",
-    "9H": "Slot-Leg [1][1][2]",
-    "rx": "Slot-Leg [1][1][3]",
-    "va": "Slot-Leg [1][2]",
-    "rE": "Slot-Leg [1][3]",
-    "dx": "Slot-Leg [2]",
-    "FS": "Slot-Leg [2][2]",
-    "8E": "Slot-Leg [2][3]",
-    "xz": "Slot-Leg [3]",
-    "zw": "Slot-Waist [1]",
-    "uF": "Slot-Waist [1][1]",
-    "nL": "Slot-Waist [1][1][1]",
-    "Ae": "Slot-Waist [1][1][2]",
-    "yi": "Slot-Waist [1][1][3]",
-    "JX": "Slot-Waist [1][2]",
-    "Td": "Slot-Waist [1][3]",
-    "bg": "Slot-Waist [2]",
-    "yM": "Slot-Waist [2][2]",
-    "Eh": "Slot-Waist [2][3]",
-    "OQ": "Slot-Waist [3]"
+    "fj": "Slot-Bow [1]",
+    "dq": "Slot",
+    "nR": "Slot-Bow [1][1]",
+    "2P": "Slot",
+    "Kf": "Slot-Bow [1][2]",
+    "fR": "Slot",
+    "JL": "Slot-Bow [2]",
+    "yU": "Slot",
+    "6O": "Slot-Bow [2][2]",
+    "rW": "Slot",
+    "lo": "Slot-Bow [3]",
+    "u6": "Slot",
+    "lM": "Slot-Bow [3][3]",
+    "KL": "Slot",
+    "zi": "Slot-Charge Blade [1]",
+    "oU": "Slot",
+    "Lt": "Slot-Charge Blade [1][1]",
+    "CD": "Slot",
+    "w4": "Slot-Charge Blade [1][2]",
+    "Zh": "Slot",
+    "NN": "Slot-Charge Blade [2]",
+    "0U": "Slot",
+    "1A": "Slot-Charge Blade [2][2]",
+    "dv": "Slot",
+    "2B": "Slot-Charge Blade [2][3]",
+    "jM": "Slot",
+    "st": "Slot-Charge Blade [3]",
+    "Qi": "Slot",
+    "89": "Slot-Charge Blade [3][3]",
+    "Wb": "Slot",
+    "do": "Slot-Dual Blades [1]",
+    "IW": "Slot",
+    "gZ": "Slot-Dual Blades [1][1]",
+    "RF": "Slot",
+    "B0": "Slot-Dual Blades [1][2]",
+    "DH": "Slot",
+    "we": "Slot-Dual Blades [2]",
+    "ji": "Slot",
+    "Za": "Slot-Dual Blades [2][2]",
+    "Yw": "Slot",
+    "Tc": "Slot-Dual Blades [3]",
+    "Ow": "Slot",
+    "3T": "Slot-Dual Blades [3][3]",
+    "6I": "Slot",
+    "Z9": "Slot-Great Sword [1]",
+    "9E": "Slot",
+    "HL": "Slot-Great Sword [1][1]",
+    "hP": "Slot",
+    "2F": "Slot-Great Sword [1][2]",
+    "Hl": "Slot",
+    "wb": "Slot-Great Sword [2]",
+    "bx": "Slot",
+    "XY": "Slot-Great Sword [2][2]",
+    "yr": "Slot",
+    "F4": "Slot-Great Sword [3]",
+    "aC": "Slot",
+    "Lb": "Slot-Great Sword [3][3]",
+    "0R": "Slot",
+    "vD": "Slot-Gunlance [1]",
+    "ER": "Slot",
+    "Jp": "Slot-Gunlance [1][1]",
+    "er": "Slot",
+    "z8": "Slot-Gunlance [1][3]",
+    "bh": "Slot",
+    "UF": "Slot-Gunlance [2]",
+    "OY": "Slot",
+    "eW": "Slot-Gunlance [2][3]",
+    "3I": "Slot",
+    "ZB": "Slot-Gunlance [3]",
+    "i3": "Slot",
+    "lx": "Slot-Gunlance [3][3]",
+    "jO": "Slot",
+    "WY": "Slot-Hammer [1]",
+    "Nd": "Slot",
+    "R2": "Slot-Hammer [1][1]",
+    "1h": "Slot",
+    "tx": "Slot-Hammer [1][2]",
+    "ew": "Slot",
+    "Ah": "Slot-Hammer [2]",
+    "At": "Slot",
+    "EQ": "Slot-Hammer [2][2]",
+    "gF": "Slot",
+    "af": "Slot-Hammer [3]",
+    "T8": "Slot",
+    "L9": "Slot-Hammer [3][3]",
+    "1Z": "Slot",
+    "GU": "Slot-Heavy Bowgun [1]",
+    "T0": "Slot",
+    "O3": "Slot-Heavy Bowgun [1][1]",
+    "25": "Slot",
+    "u9": "Slot-Heavy Bowgun [1][2]",
+    "la": "Slot",
+    "60": "Slot-Heavy Bowgun [1][3]",
+    "Fk": "Slot",
+    "Be": "Slot-Heavy Bowgun [2]",
+    "nq": "Slot",
+    "Ku": "Slot-Heavy Bowgun [3]",
+    "X3": "Slot",
+    "1Q": "Slot-Heavy Bowgun [3][3]",
+    "rR": "Slot",
+    "hp": "Slot-Hunting Horn [1]",
+    "b6": "Slot",
+    "Oq": "Slot-Hunting Horn [1][1]",
+    "E0": "Slot",
+    "CB": "Slot-Hunting Horn [1][2]",
+    "l2": "Slot",
+    "SE": "Slot-Hunting Horn [1][3]",
+    "3w": "Slot",
+    "FF": "Slot-Hunting Horn [2]",
+    "mE": "Slot",
+    "N9": "Slot-Hunting Horn [2][2]",
+    "vv": "Slot",
+    "vx": "Slot-Hunting Horn [3]",
+    "Px": "Slot",
+    "Ww": "Slot-Hunting Horn [3][3]",
+    "Jf": "Slot",
+    "fd": "Slot-Insect Glaive [1]",
+    "2x": "Slot",
+    "2S": "Slot-Insect Glaive [1][1]",
+    "wy": "Slot",
+    "SA": "Slot-Insect Glaive [1][2]",
+    "SK": "Slot",
+    "Rp": "Slot-Insect Glaive [1][3]",
+    "v0": "Slot",
+    "KF": "Slot-Insect Glaive [2]",
+    "jQ": "Slot",
+    "t2": "Slot-Insect Glaive [2][2]",
+    "QE": "Slot",
+    "yN": "Slot-Insect Glaive [3]",
+    "w6": "Slot",
+    "Z5": "Slot-Insect Glaive [3][3]",
+    "ym": "Slot",
+    "QL": "Slot-Lance [1]",
+    "po": "Slot",
+    "9p": "Slot-Lance [1][1]",
+    "5K": "Slot",
+    "3c": "Slot-Lance [1][2]",
+    "PU": "Slot",
+    "Tv": "Slot-Lance [2]",
+    "W5": "Slot",
+    "dP": "Slot-Lance [2][2]",
+    "TC": "Slot",
+    "rK": "Slot-Lance [3]",
+    "Ga": "Slot",
+    "V1": "Slot-Lance [3][3]",
+    "fP": "Slot",
+    "B5": "Slot-Light Bowgun [1]",
+    "nx": "Slot",
+    "1w": "Slot-Light Bowgun [1][1]",
+    "Q1": "Slot",
+    "pN": "Slot-Light Bowgun [1][3]",
+    "Xa": "Slot",
+    "1L": "Slot-Light Bowgun [2]",
+    "IA": "Slot",
+    "r6": "Slot-Light Bowgun [2][2]",
+    "4t": "Slot",
+    "EW": "Slot-Light Bowgun [2][3]",
+    "5P": "Slot",
+    "Eo": "Slot-Light Bowgun [3]",
+    "iQ": "Slot",
+    "m1": "Slot-Light Bowgun [3][3]",
+    "bA": "Slot",
+    "r7": "Slot-Long Sword [1]",
+    "Z8": "Slot",
+    "Zz": "Slot-Long Sword [1][1]",
+    "3B": "Slot",
+    "9c": "Slot-Long Sword [1][3]",
+    "PH": "Slot",
+    "o2": "Slot-Long Sword [2]",
+    "lk": "Slot",
+    "hE": "Slot-Long Sword [2][2]",
+    "mk": "Slot",
+    "B8": "Slot-Long Sword [3]",
+    "9K": "Slot",
+    "1S": "Slot-Long Sword [3][3]",
+    "q1": "Slot",
+    "Fp": "Slot-Switch Axe [1]",
+    "ka": "Slot",
+    "Vm": "Slot-Switch Axe [1][1]",
+    "Dy": "Slot",
+    "om": "Slot-Switch Axe [1][2]",
+    "ce": "Slot",
+    "nl": "Slot-Switch Axe [2]",
+    "3R": "Slot",
+    "h5": "Slot-Switch Axe [2][2]",
+    "b7": "Slot",
+    "OW": "Slot-Switch Axe [2][3]",
+    "Yj": "Slot",
+    "ZR": "Slot-Switch Axe [3]",
+    "Rm": "Slot",
+    "Pd": "Slot-Switch Axe [3][3]",
+    "pU": "Slot",
+    "0K": "Slot-Sword And Shield [1]",
+    "jn": "Slot",
+    "pJ": "Slot-Sword And Shield [1][1]",
+    "Qd": "Slot",
+    "yI": "Slot-Sword And Shield [1][2]",
+    "ha": "Slot",
+    "Wj": "Slot-Sword And Shield [1][3]",
+    "Zo": "Slot",
+    "sr": "Slot-Sword And Shield [2]",
+    "JY": "Slot",
+    "Kv": "Slot-Sword And Shield [2][3]",
+    "D3": "Slot",
+    "bn": "Slot-Sword And Shield [3]",
+    "H5": "Slot",
+    "Lq": "Slot-Sword And Shield [3][3]",
+    "xw": "Slot",
+    "6e": "Slot",
+    "H3": "Slot-Arm [1]",
+    "9R": "Slot-Arm [1][1]",
+    "vQ": "Slot-Arm [1][1][1]",
+    "Jm": "Slot-Arm [1][1][3]",
+    "e2": "Slot-Arm [1][2]",
+    "Dj": "Slot-Arm [1][2][2]",
+    "RA": "Slot-Arm [1][3]",
+    "Jn": "Slot-Arm [2]",
+    "T1": "Slot-Arm [2][2]",
+    "19": "Slot-Arm [2][3]",
+    "j3": "Slot-Arm [3]",
+    "lD": "Slot-Chest [1]",
+    "vb": "Slot-Chest [1][1]",
+    "FZ": "Slot-Chest [1][1][1]",
+    "q0": "Slot-Chest [1][1][3]",
+    "H0": "Slot-Chest [1][2]",
+    "uY": "Slot-Chest [1][3]",
+    "Wa": "Slot-Chest [2]",
+    "xA": "Slot-Chest [2][2]",
+    "Qf": "Slot-Chest [3]",
+    "fa": "Slot-Helm [1]",
+    "zf": "Slot-Helm [1][1]",
+    "Dl": "Slot-Helm [1][1][1]",
+    "9n": "Slot-Helm [1][1][3]",
+    "fo": "Slot-Helm [1][2]",
+    "wI": "Slot-Helm [1][3]",
+    "al": "Slot-Helm [2]",
+    "cj": "Slot-Helm [2][2]",
+    "QX": "Slot-Helm [2][3]",
+    "KA": "Slot-Helm [3]",
+    "Q3": "Slot-Leg [1]",
+    "9H": "Slot-Leg [1][1]",
+    "rx": "Slot-Leg [1][1][2]",
+    "va": "Slot-Leg [1][1][3]",
+    "rE": "Slot-Leg [1][2]",
+    "dx": "Slot-Leg [1][3]",
+    "FS": "Slot-Leg [2]",
+    "8E": "Slot-Leg [2][2]",
+    "xz": "Slot-Leg [2][3]",
+    "zw": "Slot-Leg [3]",
+    "uF": "Slot-Waist [1]",
+    "nL": "Slot-Waist [1][1]",
+    "Ae": "Slot-Waist [1][1][1]",
+    "yi": "Slot-Waist [1][1][2]",
+    "JX": "Slot-Waist [1][1][3]",
+    "Td": "Slot-Waist [1][2]",
+    "bg": "Slot-Waist [1][3]",
+    "yM": "Slot-Waist [2]",
+    "Eh": "Slot-Waist [2][2]",
+    "OQ": "Slot-Waist [2][3]",
+    "xP": "Slot-Waist [3]"
 }
