1. add jaJP lang

--- a/src/assets/scripts/json/langs/enUS/dataset.json
+++ b/src/assets/scripts/json/langs/enUS/dataset.json
@@ -1,262 +1,159 @@
 {
-    "fj": "Slot-Bow [1]",
-    "dq": "Slot",
-    "nR": "Slot-Bow [1][1]",
-    "2P": "Slot",
-    "Kf": "Slot-Bow [1][2]",
-    "fR": "Slot",
-    "JL": "Slot-Bow [2]",
-    "yU": "Slot",
-    "6O": "Slot-Bow [2][2]",
-    "rW": "Slot",
-    "lo": "Slot-Bow [3]",
-    "u6": "Slot",
-    "lM": "Slot-Bow [3][3]",
-    "KL": "Slot",
-    "zi": "Slot-Charge Blade [1]",
-    "oU": "Slot",
-    "Lt": "Slot-Charge Blade [1][1]",
-    "CD": "Slot",
-    "w4": "Slot-Charge Blade [1][2]",
-    "Zh": "Slot",
-    "NN": "Slot-Charge Blade [2]",
-    "0U": "Slot",
-    "1A": "Slot-Charge Blade [2][2]",
-    "dv": "Slot",
-    "2B": "Slot-Charge Blade [2][3]",
-    "jM": "Slot",
-    "st": "Slot-Charge Blade [3]",
-    "Qi": "Slot",
-    "89": "Slot-Charge Blade [3][3]",
-    "Wb": "Slot",
-    "do": "Slot-Dual Blades [1]",
-    "IW": "Slot",
-    "gZ": "Slot-Dual Blades [1][1]",
-    "RF": "Slot",
-    "B0": "Slot-Dual Blades [1][2]",
-    "DH": "Slot",
-    "we": "Slot-Dual Blades [2]",
-    "ji": "Slot",
-    "Za": "Slot-Dual Blades [2][2]",
-    "Yw": "Slot",
-    "Tc": "Slot-Dual Blades [3]",
-    "Ow": "Slot",
-    "3T": "Slot-Dual Blades [3][3]",
-    "6I": "Slot",
-    "Z9": "Slot-Great Sword [1]",
-    "9E": "Slot",
-    "HL": "Slot-Great Sword [1][1]",
-    "hP": "Slot",
-    "2F": "Slot-Great Sword [1][2]",
-    "Hl": "Slot",
-    "wb": "Slot-Great Sword [2]",
-    "bx": "Slot",
-    "XY": "Slot-Great Sword [2][2]",
-    "yr": "Slot",
-    "F4": "Slot-Great Sword [3]",
-    "aC": "Slot",
-    "Lb": "Slot-Great Sword [3][3]",
-    "0R": "Slot",
-    "vD": "Slot-Gunlance [1]",
-    "ER": "Slot",
-    "Jp": "Slot-Gunlance [1][1]",
-    "er": "Slot",
-    "z8": "Slot-Gunlance [1][3]",
-    "bh": "Slot",
-    "UF": "Slot-Gunlance [2]",
-    "OY": "Slot",
-    "eW": "Slot-Gunlance [2][3]",
-    "3I": "Slot",
-    "ZB": "Slot-Gunlance [3]",
-    "i3": "Slot",
-    "lx": "Slot-Gunlance [3][3]",
-    "jO": "Slot",
-    "WY": "Slot-Hammer [1]",
-    "Nd": "Slot",
-    "R2": "Slot-Hammer [1][1]",
-    "1h": "Slot",
-    "tx": "Slot-Hammer [1][2]",
-    "ew": "Slot",
-    "Ah": "Slot-Hammer [2]",
-    "At": "Slot",
-    "EQ": "Slot-Hammer [2][2]",
-    "gF": "Slot",
-    "af": "Slot-Hammer [3]",
-    "T8": "Slot",
-    "L9": "Slot-Hammer [3][3]",
-    "1Z": "Slot",
-    "GU": "Slot-Heavy Bowgun [1]",
-    "T0": "Slot",
-    "O3": "Slot-Heavy Bowgun [1][1]",
-    "25": "Slot",
-    "u9": "Slot-Heavy Bowgun [1][2]",
-    "la": "Slot",
-    "60": "Slot-Heavy Bowgun [1][3]",
-    "Fk": "Slot",
-    "Be": "Slot-Heavy Bowgun [2]",
-    "nq": "Slot",
-    "Ku": "Slot-Heavy Bowgun [3]",
-    "X3": "Slot",
-    "1Q": "Slot-Heavy Bowgun [3][3]",
-    "rR": "Slot",
-    "hp": "Slot-Hunting Horn [1]",
-    "b6": "Slot",
-    "Oq": "Slot-Hunting Horn [1][1]",
-    "E0": "Slot",
-    "CB": "Slot-Hunting Horn [1][2]",
-    "l2": "Slot",
-    "SE": "Slot-Hunting Horn [1][3]",
-    "3w": "Slot",
-    "FF": "Slot-Hunting Horn [2]",
-    "mE": "Slot",
-    "N9": "Slot-Hunting Horn [2][2]",
-    "vv": "Slot",
-    "vx": "Slot-Hunting Horn [3]",
-    "Px": "Slot",
-    "Ww": "Slot-Hunting Horn [3][3]",
-    "Jf": "Slot",
-    "fd": "Slot-Insect Glaive [1]",
-    "2x": "Slot",
-    "2S": "Slot-Insect Glaive [1][1]",
-    "wy": "Slot",
-    "SA": "Slot-Insect Glaive [1][2]",
-    "SK": "Slot",
-    "Rp": "Slot-Insect Glaive [1][3]",
-    "v0": "Slot",
-    "KF": "Slot-Insect Glaive [2]",
-    "jQ": "Slot",
-    "t2": "Slot-Insect Glaive [2][2]",
-    "QE": "Slot",
-    "yN": "Slot-Insect Glaive [3]",
-    "w6": "Slot",
-    "Z5": "Slot-Insect Glaive [3][3]",
-    "ym": "Slot",
-    "QL": "Slot-Lance [1]",
-    "po": "Slot",
-    "9p": "Slot-Lance [1][1]",
-    "5K": "Slot",
-    "3c": "Slot-Lance [1][2]",
-    "PU": "Slot",
-    "Tv": "Slot-Lance [2]",
-    "W5": "Slot",
-    "dP": "Slot-Lance [2][2]",
-    "TC": "Slot",
-    "rK": "Slot-Lance [3]",
-    "Ga": "Slot",
-    "V1": "Slot-Lance [3][3]",
-    "fP": "Slot",
-    "B5": "Slot-Light Bowgun [1]",
-    "nx": "Slot",
-    "1w": "Slot-Light Bowgun [1][1]",
-    "Q1": "Slot",
-    "pN": "Slot-Light Bowgun [1][3]",
-    "Xa": "Slot",
-    "1L": "Slot-Light Bowgun [2]",
-    "IA": "Slot",
-    "r6": "Slot-Light Bowgun [2][2]",
-    "4t": "Slot",
-    "EW": "Slot-Light Bowgun [2][3]",
-    "5P": "Slot",
-    "Eo": "Slot-Light Bowgun [3]",
-    "iQ": "Slot",
-    "m1": "Slot-Light Bowgun [3][3]",
-    "bA": "Slot",
-    "r7": "Slot-Long Sword [1]",
-    "Z8": "Slot",
-    "Zz": "Slot-Long Sword [1][1]",
-    "3B": "Slot",
-    "9c": "Slot-Long Sword [1][3]",
-    "PH": "Slot",
-    "o2": "Slot-Long Sword [2]",
-    "lk": "Slot",
-    "hE": "Slot-Long Sword [2][2]",
-    "mk": "Slot",
-    "B8": "Slot-Long Sword [3]",
-    "9K": "Slot",
-    "1S": "Slot-Long Sword [3][3]",
-    "q1": "Slot",
-    "Fp": "Slot-Switch Axe [1]",
-    "ka": "Slot",
-    "Vm": "Slot-Switch Axe [1][1]",
-    "Dy": "Slot",
-    "om": "Slot-Switch Axe [1][2]",
-    "ce": "Slot",
-    "nl": "Slot-Switch Axe [2]",
-    "3R": "Slot",
-    "h5": "Slot-Switch Axe [2][2]",
-    "b7": "Slot",
-    "OW": "Slot-Switch Axe [2][3]",
-    "Yj": "Slot",
-    "ZR": "Slot-Switch Axe [3]",
-    "Rm": "Slot",
-    "Pd": "Slot-Switch Axe [3][3]",
-    "pU": "Slot",
-    "0K": "Slot-Sword And Shield [1]",
-    "jn": "Slot",
-    "pJ": "Slot-Sword And Shield [1][1]",
-    "Qd": "Slot",
-    "yI": "Slot-Sword And Shield [1][2]",
-    "ha": "Slot",
-    "Wj": "Slot-Sword And Shield [1][3]",
-    "Zo": "Slot",
-    "sr": "Slot-Sword And Shield [2]",
-    "JY": "Slot",
-    "Kv": "Slot-Sword And Shield [2][3]",
-    "D3": "Slot",
-    "bn": "Slot-Sword And Shield [3]",
-    "H5": "Slot",
-    "Lq": "Slot-Sword And Shield [3][3]",
-    "xw": "Slot",
-    "6e": "Slot",
-    "H3": "Slot-Arm [1]",
-    "9R": "Slot-Arm [1][1]",
-    "vQ": "Slot-Arm [1][1][1]",
-    "Jm": "Slot-Arm [1][1][3]",
-    "e2": "Slot-Arm [1][2]",
-    "Dj": "Slot-Arm [1][2][2]",
-    "RA": "Slot-Arm [1][3]",
-    "Jn": "Slot-Arm [2]",
-    "T1": "Slot-Arm [2][2]",
-    "19": "Slot-Arm [2][3]",
-    "j3": "Slot-Arm [3]",
-    "lD": "Slot-Chest [1]",
-    "vb": "Slot-Chest [1][1]",
-    "FZ": "Slot-Chest [1][1][1]",
-    "q0": "Slot-Chest [1][1][3]",
-    "H0": "Slot-Chest [1][2]",
-    "uY": "Slot-Chest [1][3]",
-    "Wa": "Slot-Chest [2]",
-    "xA": "Slot-Chest [2][2]",
-    "Qf": "Slot-Chest [3]",
-    "fa": "Slot-Helm [1]",
-    "zf": "Slot-Helm [1][1]",
-    "Dl": "Slot-Helm [1][1][1]",
-    "9n": "Slot-Helm [1][1][3]",
-    "fo": "Slot-Helm [1][2]",
-    "wI": "Slot-Helm [1][3]",
-    "al": "Slot-Helm [2]",
-    "cj": "Slot-Helm [2][2]",
-    "QX": "Slot-Helm [2][3]",
-    "KA": "Slot-Helm [3]",
-    "Q3": "Slot-Leg [1]",
-    "9H": "Slot-Leg [1][1]",
-    "rx": "Slot-Leg [1][1][2]",
-    "va": "Slot-Leg [1][1][3]",
-    "rE": "Slot-Leg [1][2]",
-    "dx": "Slot-Leg [1][3]",
-    "FS": "Slot-Leg [2]",
-    "8E": "Slot-Leg [2][2]",
-    "xz": "Slot-Leg [2][3]",
-    "zw": "Slot-Leg [3]",
-    "uF": "Slot-Waist [1]",
-    "nL": "Slot-Waist [1][1]",
-    "Ae": "Slot-Waist [1][1][1]",
-    "yi": "Slot-Waist [1][1][2]",
-    "JX": "Slot-Waist [1][1][3]",
-    "Td": "Slot-Waist [1][2]",
-    "bg": "Slot-Waist [1][3]",
-    "yM": "Slot-Waist [2]",
-    "Eh": "Slot-Waist [2][2]",
-    "OQ": "Slot-Waist [2][3]",
-    "xP": "Slot-Waist [3]"
+    "9o": "Slot-Bow [1]",
+    "6V": "Slot",
+    "oc": "Slot-Bow [1][1]",
+    "yh": "Slot-Bow [1][2]",
+    "JR": "Slot-Bow [2]",
+    "lC": "Slot-Bow [2][2]",
+    "Tp": "Slot-Bow [3]",
+    "ZD": "Slot-Bow [3][3]",
+    "eq": "Slot-Charge Blade [1]",
+    "iY": "Slot-Charge Blade [1][1]",
+    "P5": "Slot-Charge Blade [1][2]",
+    "mf": "Slot-Charge Blade [2]",
+    "iK": "Slot-Charge Blade [2][2]",
+    "hX": "Slot-Charge Blade [2][3]",
+    "pa": "Slot-Charge Blade [3]",
+    "WJ": "Slot-Charge Blade [3][3]",
+    "sZ": "Slot-Dual Blades [1]",
+    "x4": "Slot-Dual Blades [1][1]",
+    "hH": "Slot-Dual Blades [1][2]",
+    "wX": "Slot-Dual Blades [2]",
+    "EZ": "Slot-Dual Blades [2][2]",
+    "wY": "Slot-Dual Blades [3]",
+    "ij": "Slot-Dual Blades [3][3]",
+    "LO": "Slot-Great Sword [1]",
+    "SD": "Slot-Great Sword [1][1]",
+    "3U": "Slot-Great Sword [1][2]",
+    "bi": "Slot-Great Sword [2]",
+    "FU": "Slot-Great Sword [2][2]",
+    "w5": "Slot-Great Sword [3]",
+    "ET": "Slot-Great Sword [3][3]",
+    "XI": "Slot-Gunlance [1]",
+    "If": "Slot-Gunlance [1][1]",
+    "uS": "Slot-Gunlance [1][3]",
+    "47": "Slot-Gunlance [2]",
+    "TZ": "Slot-Gunlance [2][3]",
+    "mm": "Slot-Gunlance [3]",
+    "qW": "Slot-Gunlance [3][3]",
+    "V4": "Slot-Hammer [1]",
+    "1e": "Slot-Hammer [1][1]",
+    "Cw": "Slot-Hammer [1][2]",
+    "MZ": "Slot-Hammer [2]",
+    "M0": "Slot-Hammer [2][2]",
+    "vt": "Slot-Hammer [3]",
+    "zF": "Slot-Hammer [3][3]",
+    "jZ": "Slot-Heavy Bowgun [1]",
+    "Ck": "Slot-Heavy Bowgun [1][1]",
+    "Xw": "Slot-Heavy Bowgun [1][2]",
+    "bW": "Slot-Heavy Bowgun [1][3]",
+    "Ew": "Slot-Heavy Bowgun [2]",
+    "Y9": "Slot-Heavy Bowgun [3]",
+    "oX": "Slot-Heavy Bowgun [3][3]",
+    "8Q": "Slot-Hunting Horn [1]",
+    "qv": "Slot-Hunting Horn [1][1]",
+    "NZ": "Slot-Hunting Horn [1][2]",
+    "qD": "Slot-Hunting Horn [1][3]",
+    "RW": "Slot-Hunting Horn [2]",
+    "JA": "Slot-Hunting Horn [2][2]",
+    "Af": "Slot-Hunting Horn [3]",
+    "cp": "Slot-Hunting Horn [3][3]",
+    "W9": "Slot-Insect Glaive [1]",
+    "Mu": "Slot-Insect Glaive [1][1]",
+    "Pw": "Slot-Insect Glaive [1][2]",
+    "3k": "Slot-Insect Glaive [1][3]",
+    "cD": "Slot-Insect Glaive [2]",
+    "7z": "Slot-Insect Glaive [2][2]",
+    "Ec": "Slot-Insect Glaive [3]",
+    "Uz": "Slot-Insect Glaive [3][3]",
+    "kX": "Slot-Lance [1]",
+    "DV": "Slot-Lance [1][1]",
+    "Ms": "Slot-Lance [1][2]",
+    "8V": "Slot-Lance [2]",
+    "6D": "Slot-Lance [2][2]",
+    "zM": "Slot-Lance [3]",
+    "On": "Slot-Lance [3][3]",
+    "Ng": "Slot-Light Bowgun [1]",
+    "C0": "Slot-Light Bowgun [1][1]",
+    "BZ": "Slot-Light Bowgun [1][3]",
+    "uR": "Slot-Light Bowgun [2]",
+    "UY": "Slot-Light Bowgun [2][2]",
+    "xo": "Slot-Light Bowgun [2][3]",
+    "ln": "Slot-Light Bowgun [3]",
+    "8u": "Slot-Light Bowgun [3][3]",
+    "Ic": "Slot-Long Sword [1]",
+    "Vy": "Slot-Long Sword [1][1]",
+    "45": "Slot-Long Sword [1][3]",
+    "GP": "Slot-Long Sword [2]",
+    "NC": "Slot-Long Sword [2][2]",
+    "X6": "Slot-Long Sword [3]",
+    "nN": "Slot-Long Sword [3][3]",
+    "Pb": "Slot-Switch Axe [1]",
+    "oO": "Slot-Switch Axe [1][1]",
+    "wc": "Slot-Switch Axe [1][2]",
+    "us": "Slot-Switch Axe [2]",
+    "gi": "Slot-Switch Axe [2][2]",
+    "Ao": "Slot-Switch Axe [2][3]",
+    "HU": "Slot-Switch Axe [3]",
+    "Bm": "Slot-Switch Axe [3][3]",
+    "Cj": "Slot-Sword And Shield [1]",
+    "Je": "Slot-Sword And Shield [1][1]",
+    "uf": "Slot-Sword And Shield [1][2]",
+    "7r": "Slot-Sword And Shield [1][3]",
+    "Tj": "Slot-Sword And Shield [2]",
+    "oY": "Slot-Sword And Shield [2][3]",
+    "uP": "Slot-Sword And Shield [3]",
+    "9k": "Slot-Sword And Shield [3][3]",
+    "Z7": "Slot",
+    "PG": "Slot-Arm [1]",
+    "1d": "Slot-Arm [1][1]",
+    "ll": "Slot-Arm [1][1][1]",
+    "w3": "Slot-Arm [1][1][3]",
+    "pW": "Slot-Arm [1][2]",
+    "Vb": "Slot-Arm [1][2][2]",
+    "sD": "Slot-Arm [1][3]",
+    "FX": "Slot-Arm [2]",
+    "A9": "Slot-Arm [2][2]",
+    "B3": "Slot-Arm [2][3]",
+    "qi": "Slot-Arm [3]",
+    "gk": "Slot-Chest [1]",
+    "df": "Slot-Chest [1][1]",
+    "bK": "Slot-Chest [1][1][1]",
+    "07": "Slot-Chest [1][1][3]",
+    "bN": "Slot-Chest [1][2]",
+    "hL": "Slot-Chest [1][3]",
+    "8h": "Slot-Chest [2]",
+    "gV": "Slot-Chest [2][2]",
+    "fJ": "Slot-Chest [3]",
+    "1C": "Slot-Helm [1]",
+    "Tm": "Slot-Helm [1][1]",
+    "I9": "Slot-Helm [1][1][1]",
+    "3J": "Slot-Helm [1][1][3]",
+    "2m": "Slot-Helm [1][2]",
+    "CQ": "Slot-Helm [1][3]",
+    "Kq": "Slot-Helm [2]",
+    "KE": "Slot-Helm [2][2]",
+    "G1": "Slot-Helm [2][3]",
+    "nd": "Slot-Helm [3]",
+    "kI": "Slot-Leg [1]",
+    "bV": "Slot-Leg [1][1]",
+    "Er": "Slot-Leg [1][1][2]",
+    "lO": "Slot-Leg [1][1][3]",
+    "S7": "Slot-Leg [1][2]",
+    "iC": "Slot-Leg [1][3]",
+    "X4": "Slot-Leg [2]",
+    "rv": "Slot-Leg [2][2]",
+    "JV": "Slot-Leg [2][3]",
+    "iR": "Slot-Leg [3]",
+    "HA": "Slot-Waist [1]",
+    "fL": "Slot-Waist [1][1]",
+    "Rq": "Slot-Waist [1][1][1]",
+    "rS": "Slot-Waist [1][1][2]",
+    "u3": "Slot-Waist [1][1][3]",
+    "yq": "Slot-Waist [1][2]",
+    "Qz": "Slot-Waist [1][3]",
+    "iq": "Slot-Waist [2]",
+    "sp": "Slot-Waist [2][2]",
+    "Lo": "Slot-Waist [2][3]",
+    "yv": "Slot-Waist [3]"
 }
