--- a/src/assets/scripts/json/langs/jaJP/dataset.json
+++ b/src/assets/scripts/json/langs/jaJP/dataset.json
@@ -1,21 +1,168 @@
 {
-    "cR": "マム鑑定",
-    "yK": "マム鑑定",
-    "yW": "マム鑑定",
-    "u4": "ガイラブレイズ・雷",
-    "fi": "マム鑑定",
-    "3q": "皇金の大剣・王",
-    "fA": "マム鑑定",
-    "AO": "皇金の大剣・水",
-    "F1": "マム鑑定",
-    "Q7": "皇金の大剣・雷",
-    "1x": "マム鑑定",
-    "u5": "皇金の大剣・氷",
-    "A4": "マム鑑定",
-    "55": "皇金の大剣・屍套",
-    "AE": "マム鑑定",
-    "zb": "皇金の大剣・熔山",
-    "Qh": "マム鑑定",
-    "VN": "皇金の大剣・痺賊",
-    "Cf": "マム鑑定"
+    "Yp": "マム鑑定",
+    "cR": "ガイラブレイズ・雷",
+    "w2": "皇金の大剣・王",
+    "yK": "皇金の大剣・水",
+    "sE": "皇金の大剣・雷",
+    "yW": "皇金の大剣・氷",
+    "PN": "皇金の大剣・屍套",
+    "RJ": "皇金の大剣・熔山",
+    "O0": "皇金の大剣・痺賊",
+    "9o": "插槽-弓 [1]",
+    "6V": "插槽",
+    "oc": "插槽-弓 [1][1]",
+    "yh": "插槽-弓 [1][2]",
+    "JR": "插槽-弓 [2]",
+    "lC": "插槽-弓 [2][2]",
+    "Tp": "插槽-弓 [3]",
+    "ZD": "插槽-弓 [3][3]",
+    "eq": "插槽-充能斧 [1]",
+    "iY": "插槽-充能斧 [1][1]",
+    "P5": "插槽-充能斧 [1][2]",
+    "mf": "插槽-充能斧 [2]",
+    "iK": "插槽-充能斧 [2][2]",
+    "hX": "插槽-充能斧 [2][3]",
+    "pa": "插槽-充能斧 [3]",
+    "WJ": "插槽-充能斧 [3][3]",
+    "sZ": "插槽-雙劍 [1]",
+    "x4": "插槽-雙劍 [1][1]",
+    "hH": "插槽-雙劍 [1][2]",
+    "wX": "插槽-雙劍 [2]",
+    "EZ": "插槽-雙劍 [2][2]",
+    "wY": "插槽-雙劍 [3]",
+    "ij": "插槽-雙劍 [3][3]",
+    "LO": "插槽-大劍 [1]",
+    "SD": "插槽-大劍 [1][1]",
+    "3U": "插槽-大劍 [1][2]",
+    "bi": "插槽-大劍 [2]",
+    "FU": "插槽-大劍 [2][2]",
+    "w5": "插槽-大劍 [3]",
+    "ET": "插槽-大劍 [3][3]",
+    "XI": "插槽-銃槍 [1]",
+    "If": "插槽-銃槍 [1][1]",
+    "uS": "插槽-銃槍 [1][3]",
+    "47": "插槽-銃槍 [2]",
+    "TZ": "插槽-銃槍 [2][3]",
+    "mm": "插槽-銃槍 [3]",
+    "qW": "插槽-銃槍 [3][3]",
+    "V4": "插槽-大錘 [1]",
+    "1e": "插槽-大錘 [1][1]",
+    "Cw": "插槽-大錘 [1][2]",
+    "MZ": "插槽-大錘 [2]",
+    "M0": "插槽-大錘 [2][2]",
+    "vt": "插槽-大錘 [3]",
+    "zF": "插槽-大錘 [3][3]",
+    "jZ": "插槽-重弩 [1]",
+    "Ck": "插槽-重弩 [1][1]",
+    "Xw": "插槽-重弩 [1][2]",
+    "bW": "插槽-重弩 [1][3]",
+    "Ew": "插槽-重弩 [2]",
+    "Y9": "插槽-重弩 [3]",
+    "oX": "插槽-重弩 [3][3]",
+    "8Q": "插槽-狩獵笛 [1]",
+    "qv": "插槽-狩獵笛 [1][1]",
+    "NZ": "插槽-狩獵笛 [1][2]",
+    "qD": "插槽-狩獵笛 [1][3]",
+    "RW": "插槽-狩獵笛 [2]",
+    "JA": "插槽-狩獵笛 [2][2]",
+    "Af": "插槽-狩獵笛 [3]",
+    "cp": "插槽-狩獵笛 [3][3]",
+    "W9": "插槽-操蟲棍 [1]",
+    "Mu": "插槽-操蟲棍 [1][1]",
+    "Pw": "插槽-操蟲棍 [1][2]",
+    "3k": "插槽-操蟲棍 [1][3]",
+    "cD": "插槽-操蟲棍 [2]",
+    "7z": "插槽-操蟲棍 [2][2]",
+    "Ec": "插槽-操蟲棍 [3]",
+    "Uz": "插槽-操蟲棍 [3][3]",
+    "kX": "插槽-長槍 [1]",
+    "DV": "插槽-長槍 [1][1]",
+    "Ms": "插槽-長槍 [1][2]",
+    "8V": "插槽-長槍 [2]",
+    "6D": "插槽-長槍 [2][2]",
+    "zM": "插槽-長槍 [3]",
+    "On": "插槽-長槍 [3][3]",
+    "Ng": "插槽-輕弩 [1]",
+    "C0": "插槽-輕弩 [1][1]",
+    "BZ": "插槽-輕弩 [1][3]",
+    "uR": "插槽-輕弩 [2]",
+    "UY": "插槽-輕弩 [2][2]",
+    "xo": "插槽-輕弩 [2][3]",
+    "ln": "插槽-輕弩 [3]",
+    "8u": "插槽-輕弩 [3][3]",
+    "Ic": "插槽-太刀 [1]",
+    "Vy": "插槽-太刀 [1][1]",
+    "45": "插槽-太刀 [1][3]",
+    "GP": "插槽-太刀 [2]",
+    "NC": "插槽-太刀 [2][2]",
+    "X6": "插槽-太刀 [3]",
+    "nN": "插槽-太刀 [3][3]",
+    "Pb": "插槽-斬擊斧 [1]",
+    "oO": "插槽-斬擊斧 [1][1]",
+    "wc": "插槽-斬擊斧 [1][2]",
+    "us": "插槽-斬擊斧 [2]",
+    "gi": "插槽-斬擊斧 [2][2]",
+    "Ao": "插槽-斬擊斧 [2][3]",
+    "HU": "插槽-斬擊斧 [3]",
+    "Bm": "插槽-斬擊斧 [3][3]",
+    "Cj": "插槽-片手劍 [1]",
+    "Je": "插槽-片手劍 [1][1]",
+    "uf": "插槽-片手劍 [1][2]",
+    "7r": "插槽-片手劍 [1][3]",
+    "Tj": "插槽-片手劍 [2]",
+    "oY": "插槽-片手劍 [2][3]",
+    "uP": "插槽-片手劍 [3]",
+    "9k": "插槽-片手劍 [3][3]",
+    "Z7": "插槽",
+    "PG": "插槽-手 [1]",
+    "1d": "插槽-手 [1][1]",
+    "ll": "插槽-手 [1][1][1]",
+    "w3": "插槽-手 [1][1][3]",
+    "pW": "插槽-手 [1][2]",
+    "Vb": "插槽-手 [1][2][2]",
+    "sD": "插槽-手 [1][3]",
+    "FX": "插槽-手 [2]",
+    "A9": "插槽-手 [2][2]",
+    "B3": "插槽-手 [2][3]",
+    "qi": "插槽-手 [3]",
+    "gk": "插槽-身 [1]",
+    "df": "插槽-身 [1][1]",
+    "bK": "插槽-身 [1][1][1]",
+    "07": "插槽-身 [1][1][3]",
+    "bN": "插槽-身 [1][2]",
+    "hL": "插槽-身 [1][3]",
+    "8h": "插槽-身 [2]",
+    "gV": "插槽-身 [2][2]",
+    "fJ": "插槽-身 [3]",
+    "1C": "插槽-頭 [1]",
+    "Tm": "插槽-頭 [1][1]",
+    "I9": "插槽-頭 [1][1][1]",
+    "3J": "插槽-頭 [1][1][3]",
+    "2m": "插槽-頭 [1][2]",
+    "CQ": "插槽-頭 [1][3]",
+    "Kq": "插槽-頭 [2]",
+    "KE": "插槽-頭 [2][2]",
+    "G1": "插槽-頭 [2][3]",
+    "nd": "插槽-頭 [3]",
+    "kI": "插槽-腳 [1]",
+    "bV": "插槽-腳 [1][1]",
+    "Er": "插槽-腳 [1][1][2]",
+    "lO": "插槽-腳 [1][1][3]",
+    "S7": "插槽-腳 [1][2]",
+    "iC": "插槽-腳 [1][3]",
+    "X4": "插槽-腳 [2]",
+    "rv": "插槽-腳 [2][2]",
+    "JV": "插槽-腳 [2][3]",
+    "iR": "插槽-腳 [3]",
+    "HA": "插槽-腰 [1]",
+    "fL": "插槽-腰 [1][1]",
+    "Rq": "插槽-腰 [1][1][1]",
+    "rS": "插槽-腰 [1][1][2]",
+    "u3": "插槽-腰 [1][1][3]",
+    "yq": "插槽-腰 [1][2]",
+    "Qz": "插槽-腰 [1][3]",
+    "iq": "插槽-腰 [2]",
+    "sp": "插槽-腰 [2][2]",
+    "Lo": "插槽-腰 [2][3]",
+    "yv": "插槽-腰 [3]"
 }
