1. update git ignore 2. update chnagelog 3. update jaJP lang 4. add noto sans jp fonts

--- a/src/assets/scripts/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/json/langs/jaJP/ui.json
@@ -37,7 +37,7 @@
     "attackElement":        null,
     "statusElement":        null,
     "enhance":              null,
-    "slot":                 null,
+    "slot":                 "スロット",
     "remainingSlot":        null,
     "resistance":           null,
     "set":                  null,
@@ -45,11 +45,11 @@
     "low":                  null,
     "medium":               null,
     "high":                 null,
-    "fire":                 null,
-    "water":                null,
-    "thunder":              null,
-    "ice":                  null,
-    "dragon":               null,
+    "fire":                 "火",
+    "water":                "水",
+    "thunder":              "雷",
+    "ice":                  "氷",
+    "dragon":               "龍",
     "poison":               null,
     "paralysis":            null,
     "sleep":                null,
@@ -61,20 +61,20 @@
     "waist":                null,
     "leg":                  null,
     "charm":                null,
-    "greatSword":           null,
-    "longSword":            null,
-    "swordAndShield":       null,
-    "dualBlades":           null,
-    "hammer":               null,
-    "huntingHorn":          null,
-    "lance":                null,
-    "gunlance":             null,
-    "switchAxe":            null,
-    "chargeBlade":          null,
-    "insectGlaive":         null,
-    "lightBowgun":          null,
-    "heavyBowgun":          null,
-    "bow":                  null,
+    "greatSword":           "大剣",
+    "longSword":            "太刀",
+    "swordAndShield":       "片手剣",
+    "dualBlades":           "双剣",
+    "hammer":               "ハンマー",
+    "huntingHorn":          "狩猟笛",
+    "lance":                "ランス",
+    "gunlance":             "ガンランス",
+    "switchAxe":            "スラッシュアックス",
+    "chargeBlade":          "チャージアックス",
+    "insectGlaive":         "操虫棍",
+    "lightBowgun":          "ライトボウガン",
+    "heavyBowgun":          "ヘビィボウガン",
+    "bow":                  "弓",
     "active":               null,
     "deactive":             null,
     "include":              null,
