1. refactor crawlers 2. add ja crawlers 3. update ja ui lang 4. update rare 8 weapon

--- a/src/assets/scripts/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/json/langs/jaJP/ui.json
@@ -28,7 +28,7 @@
     "attackProperty":       null,
     "defenseProperty":      null,
     "attack":               null,
-    "elderseal":            null,
+    "elderseal":            "龍封力",
     "defense":              null,
     "sharpness":            null,
     "criticalRate":         null,
@@ -42,18 +42,18 @@
     "resistance":           null,
     "set":                  null,
     "size":                 null,
-    "low":                  null,
-    "medium":               null,
-    "high":                 null,
+    "low":                  "小",
+    "medium":               "中",
+    "high":                 "大",
     "fire":                 "火",
     "water":                "水",
     "thunder":              "雷",
     "ice":                  "氷",
     "dragon":               "龍",
-    "poison":               null,
-    "paralysis":            null,
-    "sleep":                null,
-    "blast":                null,
+    "poison":               "毒",
+    "paralysis":            "麻痺",
+    "sleep":                "睡眠",
+    "blast":                "爆破",
     "weapon":               null,
     "helm":                 null,
     "chest":                null,
